--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: .NET Core gh-pages
 
 on:
   push:
@@ -25,3 +25,11 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
     - name: dotnet publish
       run: dotnet publish -c Release -o dotnetcorewebapp
+    - name: Deploy to Github Pages
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BASE_BRANCH: development # The branch the action should deploy from.
+        BRANCH: master # The branch the action should deploy to.
+        FOLDER: build/wwwroot # The folder the action should deploy.
+        SINGLE_COMMIT: true
